[package]
name = "nakama_sdk"
version = "0.1.0"
authors = ["Joël Lupien (Jojolepro) <jojolepro@jojolepro.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nakama_rs = { path = "../nakama_rs" }
#nakama_rs = { git = "https://github.com/jojolepro/nakama_rs" }
libc = { version = "0.2"}
lazy_static = "*"
